--- a/ansible_collections/validators/roles/chain_nillion/tasks/main.yml
+++ b/ansible_collections/validators/roles/chain_nillion/tasks/main.yml
@@ -94,3 +94,20 @@
     owner: "{{ chain_nillion_user }}"
     group: users
     mode: "0644"
+
+- name: Backup
+  ansible.builtin.include_role:
+    name: binarybuilders.validators.global
+    tasks_from: backup.yml
+  vars:
+    global_user: "{{ chain_nillion_user }}"
+    global_home_dir: "/home/{{ chain_nillion_user }}"
+
+- name: Backup directories
+  ansible.builtin.copy:
+    dest: "/home/{{ chain_nillion_user }}/scripts/backup_directories.conf"
+    content: |
+      validator:{{ global_home_dir }}/config:/home/{{ chain_nillion_user }}/backups
+    mode: "0644"
+  become: true
+  become_user: "{{ chain_nillion_user }}"
