--- a/ansible_collections/validators/roles/chain_penumbra/tasks/main.yml
+++ b/ansible_collections/validators/roles/chain_penumbra/tasks/main.yml
@@ -90,3 +90,21 @@
     owner: "{{ chain_penumbra_user }}"
     group: users
     mode: "0644"
+
+- name: Backup
+  ansible.builtin.include_role:
+    name: binarybuilders.validators.global
+    tasks_from: backup.yml
+  vars:
+    global_user: "{{ chain_penumbra_user }}"
+    global_home_dir: "/home/{{ chain_penumbra_user }}"
+
+- name: Backup directories
+  ansible.builtin.copy:
+    dest: "/home/{{ chain_penumbra_user }}/scripts/backup_directories.conf"
+    content: |
+      pcli:/home/{{ chain_penumbra_user }}/.local/share/pcli:/home/{{ chain_penumbra_user }}/backups
+      validator:/mnt/HC_Volume_102009405/penumbra_home_dir/network_data/node0/cometbft/config/:/home/{{ chain_penumbra_user }}/backups
+    mode: "0644"
+  become: true
+  become_user: "{{ chain_penumbra_user }}"
