--- a/ansible_collections/validators/roles/chain_xion/tasks/main.yml
+++ b/ansible_collections/validators/roles/chain_xion/tasks/main.yml
@@ -10,14 +10,6 @@
       - gcc
     state: present
 
-- name: Create user
-  ansible.builtin.user:
-    name: "{{ chain_xion_user }}"
-    group: users
-    system: true
-    create_home: true
-    state: present
-
 - name: Add user to systemd-journal group
   ansible.builtin.user:
     name: "{{ chain_xion_user }}"
@@ -66,3 +58,20 @@
     owner: "{{ chain_xion_user }}"
     group: users
     mode: "0644"
+
+- name: Backup
+  ansible.builtin.include_role:
+    name: binarybuilders.validators.global
+    tasks_from: backup.yml
+  vars:
+    global_user: "{{ chain_xion_user }}"
+    global_home_dir: "/home/{{ chain_xion_user }}"
+
+- name: Backup directories
+  ansible.builtin.copy:
+    dest: /home/{{ chain_xion_user }}/scripts/backup_directories.conf
+    content: |
+      validator:/home/{{ chain_xion_user }}/.xiond/config:/home/{{ chain_xion_user }}/backups
+    mode: "0644"
+  become: true
+  become_user: "{{ chain_xion_user }}"
