--- a/ansible_collections/validators/roles/chain_cosmoshub/tasks/main.yml
+++ b/ansible_collections/validators/roles/chain_cosmoshub/tasks/main.yml
@@ -43,6 +43,13 @@
     create_home: true
     state: present
 
+- name: Configure shell
+  ansible.builtin.include_role:
+    name: binarybuilders.servers.configure_hosts
+    tasks_from: shell.yml
+  vars:
+    configure_hosts_users_username: "{{ chain_cosmoshub_user }}"
+
 - name: Add user to systemd-journal group
   ansible.builtin.user:
     name: "{{ chain_cosmoshub_user }}"
@@ -60,9 +67,10 @@
   loop:
     - "/home/{{ chain_cosmoshub_user }}/go/bin"
 
-- name: Install Go
+- name: Install go
   ansible.builtin.include_role:
-    name: install_go
+    name: binarybuilders.validators.global
+    tasks_from: install-go.yml
 
 - name: Cosmoshubd + Cosmovisor
   ansible.builtin.include_role:
