--- a/ansible_collections/validators/roles/chain_celestia/tasks/celestia-node.yml
+++ b/ansible_collections/validators/roles/chain_celestia/tasks/celestia-node.yml
@@ -11,7 +11,7 @@
 - name: Celestia-node | Append bootstrapper to notify list
   when: chain_celestia_bootstrapper is defined and chain_celestia_bootstrapper | bool
   ansible.builtin.set_fact:
-    service_list: "{{ service_list + [chain_celestia_bootstrapper] }}"
+    service_list: "{{ service_list + [service_bridge] }}"
 
 - name: Celestia-node | Set vars (bridge)
   when: chain_celestia_bridge is defined and chain_celestia_bridge | bool
@@ -21,7 +21,7 @@
 - name: Celestia-node | Append bridge to notify list
   when: chain_celestia_bridge is defined and chain_celestia_bridge | bool
   ansible.builtin.set_fact:
-    service_list: "{{ service_list + [chain_celestia_bridge] }}"
+    service_list: "{{ service_list + [service_validator] }}"
 
 - name: Celestia-node | Ensure celestia-node repository is present
   ansible.builtin.git:
