--- a/ansible_collections/validators/roles/chain_celestia/tasks/celestia-node.yml
+++ b/ansible_collections/validators/roles/chain_celestia/tasks/celestia-node.yml
@@ -6,22 +6,22 @@
 - name: Celestia-node | Set vars (bootstrapper)
   when: chain_celestia_bootstrapper is defined and chain_celestia_bootstrapper | bool
   ansible.builtin.set_fact:
-    node_service_list: Restart celestia-bootstrapper-{{ chain_celestia_chain_id }}
+    service_bootstrapper: Restart celestia-bootstrapper-{{ chain_celestia_chain_id }}
 
 - name: Celestia-node | Append bootstrapper to notify list
   when: chain_celestia_bootstrapper is defined and chain_celestia_bootstrapper | bool
   ansible.builtin.set_fact:
-    node_service_list: "{{ node_service_list + [service_bridge] }}"
+    node_service_list: "{{ node_service_list + [service_bootstrapper] }}"
 
 - name: Celestia-node | Set vars (bridge)
   when: chain_celestia_bridge is defined and chain_celestia_bridge | bool
   ansible.builtin.set_fact:
-    service_validator: Restart celestia-bridge-{{ chain_celestia_chain_id }}
+    service_bridge: Restart celestia-bridge-{{ chain_celestia_chain_id }}
 
 - name: Celestia-node | Append bridge to notify list
   when: chain_celestia_bridge is defined and chain_celestia_bridge | bool
   ansible.builtin.set_fact:
-    node_service_list: "{{ node_service_list + [service_validator] }}"
+    node_service_list: "{{ node_service_list + [service_bridge] }}"
 
 - name: Celestia-node | Ensure celestia-node repository is present
   ansible.builtin.git:
@@ -57,7 +57,7 @@
     executable: /bin/bash
   changed_when: true
   notify: "{{ item }}"
-  loop: "{{ service_list }}"
+  loop: "{{ node_service_list }}"
 
 - name: Celestia-node | Copy binary to home folder
   when: repo_cloned.changed # noqa: no-handler
@@ -68,7 +68,8 @@
     mode: "0755"
     owner: "{{ chain_celestia_user }}"
     group: users
-  notify: Restart {{ service_name }}
+  notify: "{{ item }}"
+  loop: "{{ node_service_list }}"
 
 - name: Celestia-node | Remove binary from /usr/local/bin
   when: repo_cloned.changed # noqa: no-handler
